# DrawMachine

./: .gitignore  CMakeLists.txt  FourierSeries.cpp  FourierSeries.hpp  README.md  main.cpp  source.txt
include/: App.cpp  App.hpp  FourierSeries.cpp  FourierSeries.hpp  Machine.cpp  Machine.hpp
src/: App.cpp  CMakeLists.txt  Machine.cpp  main.cpp
